<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_background"
    android:orientation="vertical"
    android:weightSum="1" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/preview_title"
            style="@style/titleHeading"
            android:text="@string/preview_title" />

        <Button
            android:id="@+id/backButton"
            style="@style/backButtonStyle" />
    </FrameLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PreviewImageTitle"
            style="@style/field_title_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/preview_image" />

        <ImageView
            android:id="@+id/PreviewImageImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/done_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PreviewLocationTag"
            style="@style/field_title_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/preview_location" />

        <TextView
            android:id="@+id/PreviewLocationText"
            style="@style/lots_text_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/preview_location" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PreviewImageTagTitle"
            style="@style/field_title_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/preview_imagetagtitle" />

        <TextView
            android:id="@+id/PreviewImageTag"
            style="@style/lots_text_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/preview_imagetag" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PreviewDescriptionTitle"
            style="@style/field_title_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/preview_descriptiontitle" />

        <TextView
            android:id="@+id/PreviewDescriptionText"
            style="@style/lots_text_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/preview_description" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        style="@style/button_option"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_weight="0.1"
        android:text="@string/submit" />

</LinearLayout>