<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/contactDetailsScreenTitle"
            style="@style/titleHeading"
            android:text="@string/select_image_title" />

        <Button
            android:id="@+id/backButton"
            style="@style/backButtonStyle" />

        <Button
            android:id="@+id/nextButton"
            style="@style/nextButtonStyle" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <ImageView
                android:id="@+id/preview_image"
                style="@style/preview_image_style" />

            <TextView
                android:id="@+id/preview_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_gravity="center"
                android:background="@drawable/preview_image_background"
                android:text="@string/no_preview_available" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/capture_image_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/capture_image" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>